# bitcoinkit

./: README.md  pyproject.toml
bitcoinkit/: bitcoin_price.py  bitcoin_units.py
src/assets/: historical_prices.json
src/bitcoinkit/: statistics.py  utils.py
